syntax = "proto3";

package linkflow.common.v1;

option go_package = "github.com/linkflow/engine/gen/proto/linkflow/common/v1;commonv1";

// ExecutionStatus represents the status of a workflow execution.
enum ExecutionStatus {
  EXECUTION_STATUS_UNSPECIFIED = 0;
  EXECUTION_STATUS_RUNNING = 1;
  EXECUTION_STATUS_COMPLETED = 2;
  EXECUTION_STATUS_FAILED = 3;
  EXECUTION_STATUS_CANCELLED = 4;
  EXECUTION_STATUS_TERMINATED = 5;
  EXECUTION_STATUS_TIMED_OUT = 6;
  EXECUTION_STATUS_CONTINUED_AS_NEW = 7;
}

// TaskType represents the type of task.
enum TaskType {
  TASK_TYPE_UNSPECIFIED = 0;
  TASK_TYPE_WORKFLOW_TASK = 1;
  TASK_TYPE_ACTIVITY_TASK = 2;
  TASK_TYPE_LOCAL_ACTIVITY_TASK = 3;
}

// EventType represents the type of history event.
enum EventType {
  EVENT_TYPE_UNSPECIFIED = 0;
  EVENT_TYPE_EXECUTION_STARTED = 1;
  EVENT_TYPE_EXECUTION_COMPLETED = 2;
  EVENT_TYPE_EXECUTION_FAILED = 3;
  EVENT_TYPE_EXECUTION_TIMED_OUT = 4;
  EVENT_TYPE_EXECUTION_CANCELLED = 5;
  EVENT_TYPE_EXECUTION_TERMINATED = 6;
  EVENT_TYPE_EXECUTION_CONTINUED_AS_NEW = 7;
  EVENT_TYPE_NODE_SCHEDULED = 10;
  EVENT_TYPE_NODE_STARTED = 11;
  EVENT_TYPE_NODE_COMPLETED = 12;
  EVENT_TYPE_NODE_FAILED = 13;
  EVENT_TYPE_NODE_TIMED_OUT = 14;
  EVENT_TYPE_NODE_CANCELLED = 15;
  EVENT_TYPE_TIMER_STARTED = 20;
  EVENT_TYPE_TIMER_FIRED = 21;
  EVENT_TYPE_TIMER_CANCELLED = 22;
  EVENT_TYPE_SIGNAL_RECEIVED = 30;
  EVENT_TYPE_SIGNAL_SENT = 31;
  EVENT_TYPE_WORKFLOW_TASK_SCHEDULED = 40;
  EVENT_TYPE_WORKFLOW_TASK_STARTED = 41;
  EVENT_TYPE_WORKFLOW_TASK_COMPLETED = 42;
  EVENT_TYPE_WORKFLOW_TASK_FAILED = 43;
  EVENT_TYPE_WORKFLOW_TASK_TIMED_OUT = 44;
}

// FailureType represents the type of failure.
enum FailureType {
  FAILURE_TYPE_UNSPECIFIED = 0;
  FAILURE_TYPE_APPLICATION = 1;
  FAILURE_TYPE_TIMEOUT = 2;
  FAILURE_TYPE_CANCELLED = 3;
  FAILURE_TYPE_TERMINATED = 4;
  FAILURE_TYPE_SERVER = 5;
  FAILURE_TYPE_ACTIVITY = 6;
  FAILURE_TYPE_CHILD_WORKFLOW = 7;
}

// TaskQueueKind represents the kind of task queue.
enum TaskQueueKind {
  TASK_QUEUE_KIND_UNSPECIFIED = 0;
  TASK_QUEUE_KIND_NORMAL = 1;
  TASK_QUEUE_KIND_STICKY = 2;
}
